<resources>
    <string name="app_name">果动吧</string>
    <string name="input_hint">输入场馆名字</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="order_no">未消费</string>
    <string name="order_finish">已完成</string>
    <string name="order_cancel">已取消</string>
    <string name="order_name">订单</string>
    <string name="title_activity_sport_venue_detail">SportVenueDetailActivity</string>
    <string name="title_activity_gym_list">GymListActivity</string>
    <string name="editText1_hint">手机号</string>
    <string name="editText2_hint">密码</string>
    <string name="checkBox1">记住密码</string>
    <string name="bt_login">登录</string>
    <string name="bt_register">新用户</string>
    <string name="et_username">用户名</string>
    <string name="et_phone">手机号</string>
    <string name="et_pswd">请输入密码</string>
    <string name="et_pswdconfirm">再次输入密码</string>
    <string name="register_submit">提交</string>
    <string name="title_activity_register">R</string>
    <string name="badmintonUrl">http://182.61.8.185:8080/gym_info_brief?type=1</string>
    <string name="pingpongUrl">http://182.61.8.185:8080/gym_info_brief?type=2</string>
    <string name="gymUrl">http://182.61.8.185:8080/gym_info_brief?type=4</string>
    <string name="billiardUrl">http://182.61.8.185:8080/gym_info_brief?type=5</string>
    <string name="swimmingUrl">http://182.61.8.185:8080/gym_info_brief?type=6</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="order_detail">订单详情</string>
    <string name="url_server">http://182.61.8.185:8080/version.xml</string>
</resources>

