<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_picture"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:background="@drawable/login_picture_bg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_picture">

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"

            android:orientation="vertical">
            <EditText
                android:id="@+id/loginPhone"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="phone"
                android:hint="@string/editText1_hint"
                android:background="@drawable/login_et_bg"
                android:layout_margin="2dp"/>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/divider_color"/>
            <EditText
                android:id="@+id/password"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:inputType="textPassword"
                android:hint="@string/editText2_hint"
                android:background="@drawable/login_et_bg"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_pass"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/ll_user_info"
            android:text="@string/checkBox1"/>

        <Button
            android:id="@+id/login"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/bt_login"
            android:layout_below="@id/remember_pass"
            android:background="@drawable/login_btn"
            android:textColor="@android:color/white"
            android:onClick="login" />


    </RelativeLayout>
    <Button
        android:id="@+id/register"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/bt_register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight ="20dp"
        android:background="@drawable/register_user_btn"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:onClick="registerInfo"/>

</RelativeLayout>



